-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.1
-
None
-
3
-
12365
From time to time, KIT are seeing ldlm_cli_enqueue and ll_inode_revalidate_fini LustreError messages. They mainly appear on login nodes of our clusters.
Here is an example of the error messages:
Dec 17 10:24:28 ic2n988 kernel: [512992.139174] LustreError: 11865:0 (mdc_locks.c:840:mdc_enqueue()) ldlm_cli_enqueue: -13
Dec 17 10:24:28 ic2n988 kernel: [512992.139183] LustreError: 11865:0:(mdc_locks.c:840:mdc_enqueue()) Skipped 2 previous similar messages
Dec 17 10:24:28 ic2n988 kernel: [512992.139202] LustreError: 11865:0:(file.c:2716:ll_inode_revalidate_fini()) pfs2wor1: revalidate FID [0x1d080001:0x86b7421d:0x0] error: rc = -13
Dec 17 10:24:28 ic2n988 kernel: [512992.139208] LustreError: 11865:0:(file.c:2716:ll_inode_revalidate_fini()) Skipped 2 previous similar messages
Dec 17 10:24:29 ic2n988 kernel: [512993.347645] LustreError: 13000:0:(file.c:2716:ll_inode_revalidate_fini()) pfs2wor1: revalidate FID [0x1d080001:0x86b7421d:0x0] error: rc = -13
The Lustre client in this case is at version 2.4.1 plus patch for LU-3645. The servers are also at version 2.4.1.
What do the messages mean, and how can we get rid of these error messages?
- is related to
-
LU-4705 LustreError: 89827:0:(mdc_locks.c:916:mdc_enqueue()) ldlm_cli_enqueue: -2
-
- Resolved
-