LU-4522 llite: quiet console permission error messages

Quiet some common console error messages for permission errors
that can be hit in common cases.

This is a port of eff9227f207c667042f515981f87b4e2f5d615f9
from http://review.whamcloud.com/8988

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: I8ef2eec8c466e41bdaf08779440a186e442540e5
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Faccini Bruno <bruno.faccini@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-on: http://review.whamcloud.com/17107
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>