lustre/mdc/mdc_locks.c
@@ -915,7 +915,8 @@ resend:
 	mdc_put_rpc_lock(obddev->u.cli.cl_rpc_lock, it);
 
 	if (rc < 0) {
-		CDEBUG_LIMIT((rc == -EACCES || rc == -EIDRM) ? D_INFO : D_ERROR,
+		CDEBUG_LIMIT((rc == -EACCES || rc == -EIDRM || rc == -ENOENT) ?
+			     D_INFO : D_ERROR,
 			     "%s: ldlm_cli_enqueue failed: rc = %d\n",
 			     obddev->obd_name, rc);
 
